# rag-next-fastapi

./: README.md  docker-compose.dev-services.yml  docker-compose.dev.yml
fastapi-backend/: .env.example  .gitignore  Dockerfile.prod  pyproject.toml  requirements.txt
fastapi-backend/app/: config.py  main.py
fastapi-backend/app/api/: documents.py  search.py
fastapi-backend/app/schemas/: document.py  rag.py  search.py  storage.py
fastapi-backend/app/services/: __init__.py  document_service.py  embedding_service.py  rag_service.py  search_service.py  storage_service.py
fastapi-backend/app/utils/: formatter.py
next-frontend/: next.config.ts  package-lock.json  package.json
next-frontend/src/app/: layout.tsx  page.tsx  theme.ts
next-frontend/src/app/documents/: page.tsx
next-frontend/src/app/search/: page.tsx
next-frontend/src/components/: DocumentList.tsx  DocumentUpload.tsx  MainNavigation.tsx  ResultDisplay.tsx  SearchForm.tsx  ThemeRegistry.tsx
next-frontend/src/components/documents/: DocumentInfoDialog.tsx  DocumentList.tsx  DocumentUploadDialog.tsx
next-frontend/src/components/search/: HighlightedText.tsx  ResultDisplay.tsx  SearchForm.tsx
next-frontend/src/lib/: axios.ts  document.ts  search.ts  utils.ts
next-frontend/src/types/: Document.ts  Search.ts  index.ts
